--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>60 Hizbs du Coran</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📖</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Amiri', serif; margin: 0; padding: 20px; background: #f9f9f9; color: #333; }
-        #progress { margin-bottom: 20px; text-align: center; font-size: 18px; color: #4caf50; }
-        #progress-bar { background: #ddd; height: 20px; border-radius: 10px; overflow: hidden; margin-top: 5px; }
-        #progress-fill { background: linear-gradient(to right, #4caf50, #8bc34a); height: 100%; transition: width 0.3s; }
-        select { width: 100%; padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 5px; background: #fff; cursor: pointer; }
-        #content { margin-top: 20px; direction: rtl; font-size: 20px; white-space: pre-wrap; line-height: 1.6; }
-        button { margin-top: 10px; padding: 10px 20px; background: #4caf50; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background 0.3s; }
-        button:hover { background: #45a049; }
-        button.undo { background: #f44336; }
-        button.undo:hover { background: #d32f2f; }
-        button.reset { background: #2196f3; margin-left: 10px; }
-        button.reset:hover { background: #1976d2; }
+        body { font-family: 'Amiri', serif; margin: 0; padding: 20px; background: linear-gradient(to bottom, #e8f5e9, #c8e6c9); color: #2e7d32; }
+        #progress { margin-bottom: 20px; text-align: center; font-size: 18px; color: #2e7d32; }
+        #progress-bar { background: #c8e6c9; height: 20px; border-radius: 10px; overflow: hidden; margin-top: 5px; border: 1px solid #a5d6a7; }
+        #progress-fill { background: linear-gradient(to right, #4caf50, #66bb6a); height: 100%; transition: width 0.3s; }
+        select { width: 100%; padding: 12px; font-size: 18px; border: 1px solid #81c784; border-radius: 8px; background: #ffffff; cursor: pointer; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        #content { margin-top: 20px; direction: rtl; font-size: 22px; white-space: pre-wrap; line-height: 1.8; background: #ffffff; padding: 15px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .surah-title { font-size: 24px; color: #388e3c; text-align: center; margin: 20px 0 10px; border-bottom: 1px solid #a5d6a7; padding-bottom: 5px; }
+        button { margin-top: 10px; padding: 12px 24px; background: #4caf50; color: white; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s, transform 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        button:hover { background: #43a047; transform: translateY(-2px); }
+        button.undo { background: #e57373; }
+        button.undo:hover { background: #ef5350; }
+        button.reset { background: #42a5f5; margin-left: 10px; }
+        button.reset:hover { background: #1e88e5; }
         .icon { margin-left: 5px; font-size: 14px; }
     </style>
 </head>
@@ -98,6 +100,8 @@
 
         let readHizbs = JSON.parse(localStorage.getItem('hizbsRead')) || [];
 
+        const surahNames = ['','Al-Fatihah','Al-Baqarah','Ali \'Imran','An-Nisa\'','Al-Ma\'idah','Al-An\'am','Al-A\'raf','Al-Anfal','At-Tawbah','Yunus','Hud','Yusuf','Ar-Ra\'d','Ibrahim','Al-Hijr','An-Nahl','Al-Isra\'','Al-Kahf','Maryam','Taha','Al-Anbiya\'','Al-Hajj','Al-Mu\'minun','An-Nur','Al-Furqan','Ash-Shu\'ara\'','An-Naml','Al-Qasas','Al-\'Ankabut','Ar-Rum','Luqman','As-Sajdah','Al-Ahzab','Saba\'','Fatir','Ya-Sin','As-Saffat','Sad','Az-Zumar','Ghafir','Fussilat','Ash-Shura','Az-Zukhruf','Ad-Dukhan','Al-Jathiyah','Al-Ahqaf','Muhammad','Al-Fath','Al-Hujurat','Qaf','Adh-Dhariyat','At-Tur','An-Najm','Al-Qamar','Ar-Rahman','Al-Waqi\'ah','Al-Hadid','Al-Mujadilah','Al-Hashr','Al-Mumtahanah','As-Saff','Al-Jumu\'ah','Al-Munafiqun','At-Taghabun','At-Talaq','At-Tahrim','Al-Mulk','Al-Qalam','Al-Haqqah','Al-Ma\'arij','Nuh','Al-Jinn','Al-Muzzammil','Al-Muddaththir','Al-Qiyamah','Al-Insan','Al-Mursalat','An-Naba\'','An-Nazi\'at','\'Abasa','At-Takwir','Al-Infitar','Al-Mutaffifin','Al-Inshiqaq','Al-Buruj','At-Tariq','Al-A\'la','Al-Ghashiyah','Al-Fajr','Al-Balad','Ash-Shams','Al-Layl','Ad-Duha','Ash-Sharh','At-Tin','Al-\'Alaq','Al-Qadr','Al-Bayyinah','Az-Zalzalah','Al-\'Adiyat','Al-Qari\'ah','At-Takathur','Al-\'Asr','Al-Humazah','Al-Fil','Quraysh','Al-Ma\'un','Al-Kawthar','Al-Kafirun','An-Nasr','Al-Masad','Al-Ikhlas','Al-Falaq','An-Nas'];
+
         function updateProgress() {
             const count = readHizbs.length;
             const percent = (count / 60 * 100).toFixed(0);
@@ -123,7 +127,12 @@
             const isRead = readHizbs.includes(parseInt(hizbNum));
             const range = hizbRanges[hizbNum - 1];
             let text = '';
+            let currentSurah = 0;
             for (const part of range.parts) {
+                if (part.surah !== currentSurah) {
+                    text += `<div class="surah-title">سورة ${surahNames[part.surah]}</div>`;
+                    currentSurah = part.surah;
+                }
                 const response = await fetch(`https://api.alquran.cloud/v1/surah/${part.surah}/quran-uthmani`);
                 const data = await response.json();
                 const ayahs = data.data.ayahs;
