--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         #progress { margin-bottom: 20px; text-align: center; }
         #progress-circle { width: 100px; height: 100px; margin: 0 auto; }
         select, input { width: 100%; padding: 12px; font-size: 18px; border: 1px solid #64b5f6; border-radius: 8px; background: #ffffff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin-bottom: 10px; }
-        #content { direction: rtl; white-space: pre-wrap; line-height: 1.8; background: #ffffff; padding: 15px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: font-size 0.3s; }
+        #content { direction: rtl; white-space: pre-wrap; line-height: 1.8; background: #ffffff; padding: 15px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: font-size 0.3s, opacity 0.3s; opacity: 0; }
+        #content.loaded { opacity: 1; }
         .surah-title { font-size: 24px; color: #1976d2; text-align: center; margin: 20px 0 10px; border-bottom: 1px solid #bbdefb; padding-bottom: 5px; }
         button { padding: 12px 24px; background: #2196f3; color: white; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s, transform 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 5px; }
         button:hover { background: #1e88e5; transform: translateY(-2px); }
@@ -21,7 +22,8 @@
         #font-size { display: flex; align-items: center; }
         #font-slider { flex: 1; margin-left: 10px; }
         #favorites, #history { margin-top: 20px; }
-        .favorite { background: #e3f2fd; padding: 10px; border-radius: 5px; margin-bottom: 10px; }
+        .favorite { background: #e3f2fd; padding: 10px; border-radius: 5px; margin-bottom: 10px; cursor: pointer; }
+        #loading { text-align: center; margin-top: 20px; font-style: italic; color: #757575; }
     </style>
 </head>
 <body>
@@ -40,25 +42,38 @@
     </select>
     <input type="text" id="search" placeholder="Recherche texte" oninput="searchText(this.value)">
     <div id="font-size">Taille texte: <input type="range" id="font-slider" min="12" max="30" value="22" oninput="adjustFont(this.value)"></div>
+    <div id="loading" style="display:none;">Chargement...</div>
     <div id="content"></div>
     <button class="reset" onclick="resetProgress()">Réinitialiser</button>
-    <div id="favorites"></div>
-    <div id="history"></div>
+    <div id="favorites"><h3>Favoris</h3></div>
+    <div id="history"><h3>Historique</h3></div>
 
     <script>
-        const hizbRanges = [/* insert hizbRanges array */];
-        const surahNames = [/* insert surahNames array */];
+        const hizbRanges = [
+            {hizb:1, parts:[{surah:1,start:1,end:7},{surah:2,start:1,end:74}]},
+            // ... (ajoutez le reste du tableau hizbRanges ici)
+            {hizb:60, parts:[{surah:87,start:1,end:19},{surah:88,start:1,end:26},{surah:89,start:1,end:30},{surah:90,start:1,end:20},{surah:91,start:1,end:15},{surah:92,start:1,end:21},{surah:93,start:1,end:11},{surah:94,start:1,end:8},{surah:95,start:1,end:8},{surah:96,start:1,end:19},{surah:97,start:1,end:5},{surah:98,start:1,end:8},{surah:99,start:1,end:8},{surah:100,start:1,end:11},{surah:101,start:1,end:11},{surah:102,start:1,end:8},{surah:103,start:1,end:3},{surah:104,start:1,end:9},{surah:105,start:1,end:5},{surah:106,start:1,end:4},{surah:107,start:1,end:7},{surah:108,start:1,end:3},{surah:109,start:1,end:6},{surah:110,start:1,end:3},{surah:111,start:1,end:5},{surah:112,start:1,end:4},{surah:113,start:1,end:5},{surah:114,start:1,end:6}]}
+        ];
+
+        const surahNames = ['','Al-Fatihah','Al-Baqarah','Ali \'Imran','An-Nisa\'','Al-Ma\'idah','Al-An\'am','Al-A\'raf','Al-Anfal','At-Tawbah','Yunus','Hud','Yusuf','Ar-Ra\'d','Ibrahim','Al-Hijr','An-Nahl','Al-Isra\'','Al-Kahf','Maryam','Taha','Al-Anbiya\'','Al-Hajj','Al-Mu\'minun','An-Nur','Al-Furqan','Ash-Shu\'ara\'','An-Naml','Al-Qasas','Al-\'Ankabut','Ar-Rum','Luqman','As-Sajdah','Al-Ahzab','Saba\'','Fatir','Ya-Sin','As-Saffat','Sad','Az-Zumar','Ghafir','Fussilat','Ash-Shura','Az-Zukhruf','Ad-Dukhan','Al-Jathiyah','Al-Ahqaf','Muhammad','Al-Fath','Al-Hujurat','Qaf','Adh-Dhariyat','At-Tur','An-Najm','Al-Qamar','Ar-Rahman','Al-Waqi\'ah','Al-Hadid','Al-Mujadilah','Al-Hashr','Al-Mumtahanah','As-Saff','Al-Jumu\'ah','Al-Munafiqun','At-Taghabun','At-Talaq','At-Tahrim','Al-Mulk','Al-Qalam','Al-Haqqah','Al-Ma\'arij','Nuh','Al-Jinn','Al-Muzzammil','Al-Muddaththir','Al-Qiyamah','Al-Insan','Al-Mursalat','An-Naba\'','An-Nazi\'at','\'Abasa','At-Takwir','Al-Infitar','Al-Mutaffifin','Al-Inshiqaq','Al-Buruj','At-Tariq','Al-A\'la','Al-Ghashiyah','Al-Fajr','Al-Balad','Ash-Shams','Al-Layl','Ad-Duha','Ash-Sharh','At-Tin','Al-\'Alaq','Al-Qadr','Al-Bayyinah','Az-Zalzalah','Al-\'Adiyat','Al-Qari\'ah','At-Takathur','Al-\'Asr','Al-Humazah','Al-Fil','Quraysh','Al-Ma\'un','Al-Kawthar','Al-Kafirun','An-Nasr','Al-Masad','Al-Ikhlas','Al-Falaq','An-Nas'];
+
         let quranData = JSON.parse(localStorage.getItem('quranData')) || null;
         let readHizbs = JSON.parse(localStorage.getItem('hizbsRead')) || [];
         let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
         let history = JSON.parse(localStorage.getItem('history')) || [];
 
         async function loadQuran() {
+            document.getElementById('loading').style.display = 'block';
             if (!quranData) {
-                const response = await fetch('https://api.alquran.cloud/v1/quran/quran-uthmani');
-                quranData = await response.json();
-                localStorage.setItem('quranData', JSON.stringify(quranData));
+                try {
+                    const response = await fetch('https://api.alquran.cloud/v1/quran/quran-uthmani');
+                    quranData = await response.json();
+                    localStorage.setItem('quranData', JSON.stringify(quranData));
+                } catch (e) {
+                    console.error(e);
+                }
             }
+            document.getElementById('loading').style.display = 'none';
         }
 
         function updateProgress() {
@@ -92,7 +107,7 @@
 
         async function loadHizb(hizbNum) {
             await loadQuran();
-            if (!hizbNum) return;
+            if (!hizbNum || !quranData) return;
             addToHistory(`Hizb ${hizbNum}`);
             const isRead = readHizbs.includes(parseInt(hizbNum));
             const range = hizbRanges[hizbNum - 1];
@@ -109,36 +124,41 @@
                 }
             }
             const content = document.getElementById('content');
-            let buttons = '<br><button onclick="markDone(' + hizbNum + ')">Terminé ✔</button>';
-            if (isRead) buttons += ' <button class="undo" onclick="unmarkDone(' + hizbNum + ')">Annuler ✖</button>';
-            content.innerHTML = text + buttons + '<br><button onclick="addFavorite(\'Hizb ' + hizbNum + '\')">Favori ⭐</button>';
-            content.style.opacity = 0; setTimeout(() => content.style.opacity = 1, 100);
+            let buttons = '<br><button onclick="markDone(' + hizbNum + ')">Terminé <span class="icon">✔</span></button>';
+            if (isRead) buttons += ' <button class="undo" onclick="unmarkDone(' + hizbNum + ')">Annuler <span class="icon">✖</span></button>';
+            content.innerHTML = text + buttons + '<br><button onclick="addFavorite(\'Hizb ' + hizbNum + '\')">Ajouter aux Favoris <span class="icon">⭐</span></button>';
+            content.classList.add('loaded');
             content.scrollIntoView({behavior: 'smooth'});
         }
 
         async function loadSurah(surahNum) {
             await loadQuran();
-            if (!surahNum) return;
+            if (!surahNum || !quranData) return;
             addToHistory(`Surah ${surahNames[surahNum]}`);
             const surah = quranData.data.surahs[surahNum - 1];
             let text = `<div class="surah-title">سورة ${surahNames[surahNum]}</div>`;
             surah.ayahs.forEach(ayah => text += ayah.text + ' ۝ ');
             const content = document.getElementById('content');
-            content.innerHTML = text + '<br><button onclick="addFavorite(\'Surah ' + surahNum + '\')">Favori ⭐</button>';
+            content.innerHTML = text + '<br><button onclick="addFavorite(\'Surah ' + surahNum + '\')">Ajouter aux Favoris <span class="icon">⭐</span></button>';
+            content.classList.add('loaded');
             content.scrollIntoView({behavior: 'smooth'});
         }
 
         function searchText(query) {
-            if (!query) return;
+            if (!query || !quranData) return;
             const content = document.getElementById('content');
             content.innerHTML = '';
+            content.classList.remove('loaded');
+            let results = '';
             quranData.data.surahs.forEach(surah => {
                 surah.ayahs.forEach(ayah => {
                     if (ayah.text.includes(query)) {
-                        content.innerHTML += `<div class="favorite">${surahNames[surah.number]} Ayah ${ayah.numberInSurah}: ${ayah.text}</div>`;
+                        results += `<div class="favorite" onclick="loadSurah(${surah.number})">${surahNames[surah.number]} Ayah ${ayah.numberInSurah}: ${ayah.text}</div>`;
                     }
                 });
             });
+            content.innerHTML = results || 'Aucun résultat';
+            content.classList.add('loaded');
         }
 
         function adjustFont(size) {
@@ -164,7 +184,7 @@
         }
 
         function resetProgress() {
-            if (confirm('Réinitialiser ?')) {
+            if (confirm('Réinitialiser toute la progression ?')) {
                 readHizbs = [];
                 localStorage.setItem('hizbsRead', JSON.stringify(readHizbs));
                 updateProgress();
@@ -182,7 +202,16 @@
         function renderFavorites() {
             const favDiv = document.getElementById('favorites');
             favDiv.innerHTML = '<h3>Favoris</h3>';
-            favorites.forEach(fav => favDiv.innerHTML += `<div class="favorite">${fav}</div>`);
+            favorites.forEach(fav => {
+                const div = document.createElement('div');
+                div.className = 'favorite';
+                div.textContent = fav;
+                div.onclick = () => {
+                    if (fav.startsWith('Hizb')) loadHizb(parseInt(fav.split(' ')[1]));
+                    else if (fav.startsWith('Surah')) loadSurah(parseInt(fav.split(' ')[1]));
+                };
+                favDiv.appendChild(div);
+            });
         }
 
         function addToHistory(item) {
@@ -195,7 +224,16 @@
         function renderHistory() {
             const histDiv = document.getElementById('history');
             histDiv.innerHTML = '<h3>Historique</h3>';
-            history.forEach(hist => histDiv.innerHTML += `<div class="favorite">${hist}</div>`);
+            history.forEach(hist => {
+                const div = document.createElement('div');
+                div.className = 'favorite';
+                div.textContent = hist;
+                div.onclick = () => {
+                    if (hist.startsWith('Hizb')) loadHizb(parseInt(hist.split(' ')[1]));
+                    else if (hist.startsWith('Surah')) loadSurah(parseInt(hist.split(' ')[1]));
+                };
+                histDiv.appendChild(div);
+            });
         }
 
         loadQuran().then(() => {
@@ -205,7 +243,7 @@
             renderHistory();
             adjustFont(22);
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/sw.js');
+                navigator.serviceWorker.register('/sw.js').catch(console.error);
             }
         });
     </script>
